agregue conexion a firebase hosting y agregue predeploy a los scripts en package json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm ci && vite build"
   },
   "dependencies": {
     "firebase": "^9.20.0",
