agregue el formulario de typeform a self assessment section

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@typeform/embed": "^2.10.0",
     "axios": "^1.4.0",
     "firebase": "^9.20.0",
     "firebase-admin": "^11.7.0",
