--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "firebase": "^9.20.0",
     "firebase-admin": "^11.7.0",
+    "google-auth-library": "^8.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
